--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@reduxjs/toolkit": "^1.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "next": "^13.4.19",
-    "react": "^17.0.1",
-    "react-dom": "18.2.0"
+    "next": "13.4.19",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
